<resources>
    <string name="app_name">femmehacks</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="match">Match</string>

    <string name="subjects">Subjects</string>
    <string name="subject">Subject</string>
    <string name="lookingfor">I am looking for a...</string>
    <string name="save">Save</string>
    <string name="cs">CS</string>
    <string name="spanish">Spanish</string>
    <string name="history">History</string>
    <string name="math">Math</string>
    <string-array name="relationship_array">
        <item>Mentor</item>
        <item>Mentee</item>
        <item>Study Buddy</item>
    </string-array>
    <string name="filter">Filter</string>
</resources>