<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginVertical="20dp"
            android:id="@+id/matchList"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginHorizontal="20dp"
            android:background="@color/white">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/filterLayout"
            android:layout_marginVertical="20dp">
            <TextView
                android:text="@string/subjects"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/subjectsText"/>
            <com.google.android.material.chip.ChipGroup
                android:id="@+id/subjectsGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/subjectsText">
                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/subjectBox1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/cs"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>
                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/subjectBox2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toEndOf="@id/subjectBox1"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="20dp"
                    android:text="@string/spanish"/>
                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/subjectBox3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toEndOf="@id/subjectBox2"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="20dp"
                    android:text="@string/history"/>
                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/subjectBox4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toEndOf="@id/subjectBox3"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="20dp"
                    android:text="@string/math"/>
            </com.google.android.material.chip.ChipGroup>
            <TextView
                android:text="Role"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/subjectsGroup"
                android:id="@+id/roleText"/>
            <RadioGroup
                android:id="@+id/rolesGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/roleText">
                <RadioButton
                    android:id="@+id/mentorBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="Mentor"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>
                <RadioButton
                    android:id="@+id/menteeBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toEndOf="@id/mentorBox"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="20dp"
                    android:text="Mentee"/>
                <RadioButton
                    android:id="@+id/buddyBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toEndOf="@id/menteeBox"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="20dp"
                    android:text="Study Buddy"/>
            </RadioGroup>
            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/rolesGroup"
                app:layout_constraintStart_toStartOf="parent"
                android:text="Filter"
                android:id="@+id/filterButton"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>